--- a/package.json
+++ b/package.json
@@ -78,7 +78,7 @@
     "@spalger/filesaver": "1.1.2",
     "@spalger/leaflet-draw": "0.2.3",
     "@spalger/leaflet-heat": "0.1.3",
-    "@spalger/numeral": "^2.0.0",
+    "@spalger/numeral": "git+https://github.com/optimdata/numeral-js#d66cb5fee9a79edefd3d5cad0404ac836b5f0036",
     "@spalger/test-subj-selector": "0.2.1",
     "@spalger/ui-ace": "0.2.3",
     "JSONStream": "1.1.1",
