--- a/package.json
+++ b/package.json
@@ -75,10 +75,10 @@
     "@elastic/httpolyglot": "0.1.2-elasticpatch1",
     "@elastic/leaflet-draw": "0.2.3",
     "@elastic/leaflet-heat": "0.1.3",
-    "@elastic/numeral": "2.2.2",
     "@elastic/test-subj-selector": "0.2.1",
     "@elastic/ui-ace": "0.2.3",
     "@elastic/webpack-directory-name-as-main": "2.0.2",
+    "@elastic/numeral": "optimdata/numeral-js#676efbdd11d61eced1babcac4196da13dd37c770",
     "JSONStream": "1.1.1",
     "accept-language-parser": "1.2.0",
     "angular": "1.4.7",
