--- a/package.json
+++ b/package.json
@@ -78,7 +78,7 @@
     "@spalger/filesaver": "1.1.2",
     "@spalger/leaflet-draw": "0.2.3",
     "@spalger/leaflet-heat": "0.1.3",
-    "@spalger/numeral": "^2.0.0",
+    "@spalger/numeral": "optimdata/numeral-js#5ae408f23420f18f24987aa0f0c2990ecf083ecb",
     "@spalger/test-subj-selector": "0.2.1",
     "@spalger/ui-ace": "0.2.3",
     "JSONStream": "1.1.1",
